@@ -11,7 +11,7 @@ lib/SPVM/Array/Short.pm
 lib/SPVM/BaseObject.pm
 lib/SPVM/Document/FAQ.pod
 lib/SPVM/Document/PerlAPI.pod
-lib/SPVM/Document/Specification.pod
+lib/SPVM/Document/Spec.pod
 lib/SPVM/Document/Tutorial.pod
 lib/SPVM/Object.pm
 lib/SPVM/stdout.pm
@@ -21,6 +21,7 @@ Makefile.PL
 MANIFEST			This list of files
 ppport.h
 README.md
+resolved
 solo/Main.spvm
 solo/Makefile
 solo/README.md
