@@ -627,6 +627,8 @@ is_deeply(
 
 # Number literal
 {
+  ok(SPVM::TestCase::number_literal_underline_hex());
+  ok(SPVM::TestCase::number_literal_underline());
   ok(SPVM::TestCase::number_literal_hex_specifier());
   ok(SPVM::TestCase::number_literal_hex_all_number());
   ok(SPVM::TestCase::number_literal_hex_int());
